Any disposition that's not "inline" should be treated as "attachment". Bug 172003, r=bbaetz, sr=rpotts